# quicklogs

./: .gitignore  README.md  pyproject.toml
ezloggers/: __init__.py  ezloggers.py
quicklogs/: __init__.py  quicklogs.py
ready_logger/: __init__.py  ready_logger.py
tests/: test_logger.py
