[tool.poetry]
name = "ezloggers"
version = "1.1.0"
description = "Easily configure Python loggers."
authors = ["Dan Kelleher <kelleherjdan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danklabs-dev/ezloggers"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
keywords = ["logs", "logger", "loggers", "logging"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
